# cpp_basics

./: .gitignore  CiCd.sln  _log.txt  azure-pipelines-1.yml  azure-pipelines.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  links.txt
CPPBasics/: .gitignore  CPPBasics.sln
CPPBasics/override_specifier/: override_specifier.cpp  override_specifier.vcxproj  override_specifier.vcxproj.filters
SQLiteTest/: CMakeLists.txt
WebApplication1/: Dockerfile  GuidProvider.cs  Startup.cs
WebApplication1.Tests/: UnitTests.cs  WebApplication1.Tests.csproj
WebApplication1/Controllers/: HomeController.cs
server/: Dockerfile  Dockerfile2  index.html  server.py
